supports Firefox, Chrome, Safari now. Hidden scrollbars for webkit. Scrolling shadows. Interests toggles correctly now.

--- a/css/navbar-mod.css
+++ b/css/navbar-mod.css
@@ -172,6 +172,7 @@ a {
 
 div.underline {
     position: fixed;
+    z-index: 9;
     left: calc(80% - 375px);
     width: 400px;
     height: 60px;
@@ -260,8 +261,8 @@ div.background {
     left: 0;
     margin-left: 10%;
     margin-right: 10%;
-    z-index: -2;
-    display: none;
+    width: 80%;
+    z-index: 0;
 }
 
 div.background-home {
@@ -269,13 +270,12 @@ div.background-home {
     position: fixed;
     top: 0;
     left: 0;
+    width: 80%;
     margin-left: 10%;
     margin-right: 10%;
 }
 
 div.background.active {
-    z-index: -2;
-    display: none;
 }
 
 div.blur {
@@ -284,14 +284,52 @@ div.blur {
     left: 0;
     margin-left: 10%;
     margin-right: 10%;
-    z-index: -1;
+    width: 80%;
+    z-index: 0;
     display: none;
 }
 
-div.blur.active {
-    z-index: -1;
+
+
+
+.scrollbox::-webkit-scrollbar {
     display: none;
 }
+
+
+.scrollbox {
+	overflow: auto;
+	width: 200px;
+    position: absolute;
+    margin-top: 80px;
+    margin-left: 38%;
+    margin-right: 1.5%;
+    width: 60.5%;
+    z-index: 2;
+
+	background:
+		/* Shadow covers */
+		linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0)),
+		linear-gradient(rgba(255,255,255,0), white 90%) 0 100%,
+		
+		/* Shadows */
+		radial-gradient(50% 0, farthest-side, rgba(0,0,0,.2), rgba(0,0,0,0)),
+		radial-gradient(50% 100%,farthest-side, rgba(0,0,0,.2), rgba(0,0,0,0)) 0 100%;
+	background:
+		/* Shadow covers */
+		linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0)),
+		linear-gradient(rgba(255,255,255,0), white 90%) 0 100%,
+		
+		/* Shadows */
+		radial-gradient(farthest-side at 50% 0, rgba(0,0,0,.2), rgba(0,0,0,0)),
+		radial-gradient(farthest-side at 50% 100%, rgba(0,0,0,.2), rgba(0,0,0,0)) 0 100%;
+	background-repeat: no-repeat;
+	background-size: 100% 0px, 100% 0px, 100% 14px, 100% 14px;
+	
+	/* Opera doesn't support this in the shorthand */
+	background-attachment: local, local, scroll, scroll;
+}
+
 
 
 
